desci-media-isolated/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: desci-media-isolated
  labels:
    App: DesciMediaIsolated
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      App: DesciMediaIsolated
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        App: DesciMediaIsolated
    spec:
      containers:
        - image: 523044037273.dkr.ecr.us-east-2.amazonaws.com/desci-media-isolated:production
          name: desci-media-isolated
          ports:
            - containerPort: 7771
              name: media_isolated
          resources:
            limits:
              cpu: '0.5'
              memory: 2Gi
            requests:
              cpu: 250m
              memory: 1Gi
      serviceAccountName: 'default'
