desci-media-isolated/kubernetes/deployment_staging.yaml
apiVersion: v1
kind: Service
metadata:
  name: desci-media-isolated-staging-service
  labels:
    App: DesciMediaIsolatedStaging
spec:
  type: ClusterIP
  selector:
    App: DesciMediaIsolatedStaging
  ports:
    - name: api
      port: 7771
      targetPort: 7771
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: desci-media-isolated-staging
  labels:
    App: DesciMediaIsolatedStaging
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      App: DesciMediaIsolatedStaging
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        App: DesciMediaIsolatedStaging
    spec:
      containers:
        - image: 523044037273.dkr.ecr.us-east-2.amazonaws.com/desci-media-isolated-staging:production
          name: desci-media-isolated-staging
          ports:
            - containerPort: 7771
              name: api
          resources:
            limits:
              cpu: '0.5'
              memory: 2Gi
            requests:
              cpu: 250m
              memory: 1Gi
      serviceAccountName: 'default'
