desci-media-isolated/kubernetes/network_policies_staging.yaml
# Enable ingress from DesciServer only
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-backend-pod-to-isolated-media-server-comms-staging
spec:
  podSelector:
    matchLabels:
      App: DesciMediaIsolatedStaging
  ingress:
    - from:
        - podSelector:
            matchLabels:
              allow-from: 'DesciServerStaging'
  policyTypes:
    - Ingress
---
# Enable egress to DesciServer only
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-to-desciserver-only-staging
spec:
  podSelector:
    matchLabels:
      App: DesciMediaIsolatedStaging
  egress:
    - to:
        - podSelector:
            matchLabels:
              allow-from: 'DesciServerStaging'
  policyTypes:
    - Egress
